@@ -3,8 +3,10 @@ $Id: ChangeLog,v 1.111 2010/06/01 20:26:45 tho Exp $
 ChangeLog file of LibU - http://www.koanlogic.com/libu/index.html
 
 LibU X.Y.Z
-	- #undef 'I' - imaginary unit - when including complex.h (avoid possible 
-	  name clash, e.g. openssl/rsa.h)
+	- [array] #undef 'I' (imaginary unit) when including complex.h to avoid
+	  name clash -- e.g. openssl/rsa.h
+	- [net] add U_NET_OPT_DONT_RETRY to avoid shielding connection attempts
+	  against signal interrupts.
 
 LibU 2.1.0
 	- fix bug in configure when handling the inline keyword support
